--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "com.unity.cinemachine": "2.6.17",
     "com.unity.collab-proxy": "1.17.7",
+    "com.unity.formats.fbx": "5.0.0",
     "com.unity.ide.rider": "3.0.17",
     "com.unity.ide.visualstudio": "2.0.17",
     "com.unity.ide.vscode": "1.2.5",
