autolod installed finnaly

--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "com.unity.autolod": "https://github.com/Unity-Technologies/AutoLOD.git",
     "com.unity.cinemachine": "2.8.9",
     "com.unity.collab-proxy": "2.0.5",
     "com.unity.formats.fbx": "5.0.0",
@@ -15,6 +16,7 @@
     "com.unity.timeline": "1.6.5",
     "com.unity.toolchain.win-x86_64-linux-x86_64": "2.0.5",
     "com.unity.ugui": "1.0.0",
+    "com.whinarn.unitymeshsimplifier": "https://github.com/Whinarn/UnityMeshSimplifier.git",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
     "com.unity.modules.animation": "1.0.0",
