--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -11,6 +11,8 @@
     "com.unity.postprocessing": "3.2.2",
     "com.unity.probuilder": "5.1.1",
     "com.unity.progrids": "3.0.3-preview.6",
+    "com.unity.remote-config": "3.3.2",
+    "com.unity.services.analytics": "4.4.2",
     "com.unity.test-framework": "1.1.33",
     "com.unity.textmeshpro": "3.0.6",
     "com.unity.timeline": "1.6.5",
